--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <h3> This is workshop 11 </h3>
-    <img width="300" height="200" src="images/visa.png" />
+
+    <body>
+
+    <h2>
+        <center> WE LOVE YOU! </center>  
+    </h2>
+   
+    <center> <img width="300" height="400" src="images/anneamelia.jpg" /> </center>
+
+   <h3>
+    <center> "Yummy!" </center>
+</h3>
+
+<p class="text"> To the most loving wife and mother: you're our superstar! 
+    We love you and are so blessed to have you in our life, to love us and care for us unconditionally.
+    Every waking day puts a smile on our faces, to know that we have you in our lives.
+    Although our week is filled with cries, you always know how to make us feel better, to comfort and fill our hearts again. 
+    We want you know to know that without you, it is simply not complete, and that our laughter and smiles 
+    won't be possible withoutour awesome wife and mommy to the two banies at home!
+
+    - love, nigel and amelia </p class>
+    
+</p>
+
 </body>
 </html>
